the oracle infra setup is done.